--- a/BeerMate/app/src/main/res/values/strings.xml
+++ b/BeerMate/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="locations">Locations</string>
     <string name="logout">Logout</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
