Napravljen dizajn za aktivnost login i dodani stringovi

--- a/BeerMate/app/src/main/res/values/strings.xml
+++ b/BeerMate/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="logout">Logout</string>
     <string name="settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+    <string name="emailLogin">E-mail</string>
+    <string name="passwordLogin">Password</string>
+    <string name="signUpLogin">Not a member? Sign up now.</string>
+    <string name="signupButtonLogin">LOGIN</string>
+    <string name="naslovLogin">BeerMate</string>
 
 </resources>
